2009-05-17  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-dispatch-event): New event
	`:read-from-minibuffer'.
	(slime-read-from-minibuffer-for-swank): New.

	* swank.lisp (dispatch-event): Pass through :read-from-minibuffer
	event.
	(read-from-minibuffer-in-emacs): Now uses new event rather than
	eval-in-emacs.

2009-05-17  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp (compile-temp-file): Remove backward
	compatibility code.
	(eval-in-frame, frame-source-location-for-emacs)
	(return-from-frame, restart-frame)
	(disassemble-frame, xref-locations): Simplify.
	(list-callers): Use ccl::caller-functions which gives us more precise
	src-locs than ccl::callers.
	(canonicalize-location, remove-filename-quoting)
	(maybe-method-location): Deleted.  No longer used.
	(who-specializes): Simplify.

2009-05-17  Helmut Eller  <heller@common-lisp.net>

	More precise compiler-message location.

	* swank-openmcl.lisp (handle-compiler-warning): Use the
	source-note slot of the condition as source location, which is
	more precise than the stream-position slot.
	(compiler-warning-severity): New function. The distinction between
	warning and style-warning is rather arbitrary but let's try it.
	(swank-compile-file): Pass the external-format arg down to
	compile file.
	(*buffer-name*, *buffer-offset*, condition-source-position):
	Deleted. No longer used.

2009-05-16  Helmut Eller  <heller@common-lisp.net>

	Minor refactoring.

	* swank-openmcl.lisp (call/frame, with-frame): New macro.
	(frame-visible-variables): New helper.
	(frame-var-value, frame-locals, disassemble-frame): Use it.
	(frame-catch-tags): Removed.  Way to much code for such a rarely
	used function.

2009-05-16  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp (swank-compile-string): Store the source
	code, by setting CCL:*SAVE-SOURCE-LOCATIONS* to T, for better
	disassembler output.
	(function-source-location): Remove the old pre-1.3 version.
